--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-    --main-color: rgb(255, 255, 255);
+    --main-color: rgb(96, 137, 251);
 }
 
 body {
@@ -18,4 +18,233 @@ body {
     align-items: center;
     background: var(--main-color);
     min-height: 100vh;
+}
+
+button,
+input {
+    outline: none;
+    border: none;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.202);
+    border-radius: 10px;
+    padding: 20px 30px;
+    position: relative;
+}
+
+.container .bg {
+    position: absolute;
+    z-index: 9;
+    width: 48%;
+    height: 100%;
+    left: 0%;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(255, 255, 255);
+    transition: left .5s;
+}
+
+.container .bg .bg-circle {
+    width: 1000px;
+    height: 1000px;
+    background: rgb(93, 130, 255);
+    z-index: 10;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-130%, -50%) scale(2);
+    left: 0;
+    transition: transform .7s cubic-bezier(0, .54, 1, .46), left .7s cubic-bezier(0, .54, 1, .46);
+}
+
+.container .bg img {
+    width: 400px;
+    margin: 20px auto;
+}
+
+.container .bg.active {
+    left: 50%;
+}
+
+.container .bg.active .bg-circle {
+
+    transform: translate(32%, 48%) scale(2);
+    left: 100%;
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    transform: translateX(50%);
+    z-index: 8;
+    transition: transform .5s cubic-bezier(0, .54, .5, .99);
+}
+
+.form.active {
+    transform: translateX(-54%);
+}
+
+.item {
+    flex-grow: 1;
+}
+
+span {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
+}
+
+span a {
+    text-decoration: none;
+    float: right;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+
+}
+
+.input-field {
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    outline: .5px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    margin: 15px 0;
+    padding: 0 20px;
+}
+
+.input-field input {
+    width: 100%;
+    height: 100%;
+}
+
+.input-field i {
+    opacity: .47;
+}
+
+.input-field .bx-lock-alt {
+    cursor: pointer;
+}
+
+.checkbox-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.checkbox-text a {
+    text-decoration: none;
+    color: blue;
+}
+
+.checkbox-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    user-select: none;
+}
+
+.lgbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    gap: 20px;
+
+}
+
+.lgbtn input,
+.lgbtn button {
+    height: 100%;
+    cursor: pointer;
+    color: white;
+    background-color: rgb(0, 179, 255);
+    padding: 15px 0;
+    border-radius: 5px;
+    width: 50%;
+
+}
+
+.lgbtn .sign-up-btn {
+    background-color: rgb(255, 116, 209);
+
+}
+
+hr {
+    background-color: rgba(0, 0, 0, 0.2);
+    outline: none;
+    border: none;
+    width: 80%;
+    height: 1px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.other {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.other button {
+    width: 100%;
+    cursor: pointer;
+    padding: 15px 0;
+    font-size: 20px;
+    color: white;
+    gap: 20px;
+}
+
+.other .facebook {
+    background-color: rgb(18, 70, 167);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.other .google {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    outline: 1px solid rgba(0, 0, 0, 0.283);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 25px;
+}
+
+.other .google img {
+    width: 22px;
+}
+
+.orLogin {
+    float: right;
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.sign-up .btn {
+    background-color: rgb(255, 116, 209);
+    color: white;
+    padding: 15px 30px;
+    border-radius: 5px;
+    cursor: pointer;
 }
